--- a/TODO
+++ b/TODO
@@ -5,6 +5,11 @@ Class Plazza :
       - Affiche sur la STDOUT les résultats
       - Sauvegarde les logs dans un fichier
 
+Class Communication :
+      - Encapsule la création d'un Named Pipe / Unix Socket / Network Socket
+      - Communique entre le Plazza et les process
+      - Stock des données pour les transmettre à la class Plazza
+
 Class Process :
       - Encapsule la création d'un process
       - Contient un pool de thread (std::vector ?)
@@ -15,10 +20,6 @@ Class Thread :
       - Encapsule la création d'un thread
       - Exécute l'instruction donnée via le Scrapper
       - Stock le résulat via un Named Pipe / Unix Socket / Network Socket
-
-Class Communication :
-      - Encapsule la création d'un Named Pipe / Unix Socket / Network Socket
-      - Stock des données pour les transmettre à la class Plazza
 
 Class Scrapper :
       - Scrape le fichier pour récupérer les informations demandées
